# Nemesis_Defender_v0

./: .gitattributes  .gitignore  AGENTS.md  BUG-REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PULL-REQUESTE-TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  calibration.patch  config.yml  fisolosofia-nemesis.txt  index.html  install.sh  nemesis-install.sh  unistall-error-nemesis.txt
.nemesis/: Cargo.toml  ast-linters-config.json  config.toml  defender-exclude.txt  doc-cargo-compile-binary.md
.nemesis/.nemesis/: ast-rules.json
.nemesis/.windsurf/rules/auto-harvest/: auto-csp-not-configured.md
.nemesis/ast-linters/: Cargo.toml  build.rs  info.md  rules.toml
.nemesis/ast-linters/src/: cache.rs  language.rs  lib.rs  lint_rule.rs  parser.rs  rule_registry.rs  rule_wrappers.rs  validator.rs
.nemesis/ast-linters/src/visitors/: any_via_alias.rs  (+35 more)
.nemesis/ast-linters/tests/: pentest_integration.rs  pentest_python.rs
.nemesis/denylist/: deny-list-base.json  deny-list.json  denylist-folder-files.json
.nemesis/denylist-customers/: allowlist-customers.json  allowlist-customers.jsonc  allowlist-ebpf.toml
.nemesis/ebpf-kernel/: Cargo.toml  Makefile  info.md  install-service.sh  nemesis-cgroup-watcher.service  nemesis-ebpf.service
.nemesis/ebpf-kernel/denylist-ebpf/: commands-backup.toml  commands.toml  config.toml  egress.toml  landlock-allowed-exec.toml  paths.toml
.nemesis/ebpf-kernel/ebpf/: nemesis-block.bpf.c
.nemesis/ebpf-kernel/include/: nemesis_maps.h
.nemesis/ebpf-kernel/src/: cgroup.rs  cgroup_watcher.rs  config.rs  egress.rs  landlock.rs  lib.rs  loader.rs  logger.rs  main.rs  seccomp.rs  transport.rs  violation.rs
.nemesis/ebpf-kernel/tests/: egress_test.rs
.nemesis/forensics/: README.md
.nemesis/hooks/: debug-hook-env.rs  nemesis-posttool-check-unix.rs  nemesis-pretool-check-unix.rs  nemesis-pretool-check-windows.rs  nemesis-pretool-check.rs  nemesis-pretool-fallback.sh  pre-edit-hook.rs  pretool-hook.rs
.nemesis/install/: com.nemesis.publisher.plist  info-install.txt  nemesis-install.sh  nemesis-publisher.service  nemesis-uninstall.sh
.nemesis/lsp/: nemesis-lsp.rs
.nemesis/nemesis-cli/: Cargo.toml
.nemesis/nemesis-cli/src/: detect.rs  download.rs  hooks.rs  init.rs  main.rs  status.rs  templates.rs  uninstall.rs
.nemesis/nemesis-cli/tests/: integration_test.rs
.nemesis/nemesis-defender/: Cargo.toml  info-cmd.txt  info.md
.nemesis/nemesis-defender/config/: denylist-defender.json
.nemesis/nemesis-defender/src/: language.rs  lib.rs  main.rs  pid.rs  quarantine.rs  reporter.rs  shell_hook.rs  stats.rs  violations_log.rs
.nemesis/nemesis-defender/tests/: build_output_exclusion.rs  pentest_integration.rs  pentest_integration_v1.rs  pentest_integration_v2.rs  pentest_integration_v3.rs  restored_allowlist.rs  tmp_v9_diag.rs  watch_paths_grok.rs
.nemesis/nemesis-doctor/: Cargo.toml  NEMESIS-OPERATIONS.md
.nemesis/nemesis-doctor/src/: main.rs  report.rs
.nemesis/nemesis-install/: check.sh  install.sh
.nemesis/nemesis-publisher/: Cargo.toml
.nemesis/nemesis-publisher/src/: config.rs  identity.rs  kind.rs  ledger.rs  lib.rs  main.rs  neon.rs  publisher.rs  sanitize.rs  server.rs  service.rs  sync_state.rs
.nemesis/nemesis-publisher/tests/: aggregation.rs  identity.rs  sanitize.rs  sources.rs
.nemesis/pentest-nemesis-control/: NEMESIS_FORENSE_REPORT.md  instruction-daemon+ebpf-info.md  nemesis-release-validation-harness.md  pentest-results.csv  run-pentest.sh
.nemesis/pentest-nemesis-control/ebpf-kernel/: LIMITACOES-TESTE-ESTATICO.md  VETOR-EGRESS.md
.nemesis/pentest-nemesis-control/nemesis-defender/: allowlist-override-test.sh  backend-allowlist-scenario.sh  info.md  nemesis-pentest-harness.md  nemesis-thesis-validation-harness.md  pentest-final-amplificado-portal-dental.md  pentest-output-unificado-v3.txt  pentest-results.csv  pentest-results.md  pentest-unificado-v3.md  run-pentest.sh
.nemesis/quarantine/: PENDING.json
.nemesis/quarantine/20260613-162353__COMMIT_EDITMSG/: COMMIT_EDITMSG  meta.json
.nemesis/quarantine/20260613-162353__HEAD/: HEAD  meta.json
.nemesis/quarantine/20260613-162353__main/: main  meta.json
.nemesis/quarantine/20260703-071434__incidentes-reais.mmd/: incidentes-reais.mmd  meta.json
.nemesis/quarantine/20260703-133535__8-codigo-malicioso-supply-chain.mmd/: 8-codigo-malicioso-supply-chain.mmd  meta.json
.nemesis/scripts/: ensure-ebpf-caps.sh  nemesis-build.sh
.nemesis/workflow-enforcement/: Cargo.toml  README-AST-IMPLEMENTATION.md  ast-builder.rs  ast-types.rs  ast-validator.rs  ast-workflow-runner.rs  bash-tool-adapter.rs  command-extractor.rs  index.rs  lib.rs  permission-gate.rs  types.rs  violation-logger.rs  workflow-catalog.rs  workflow-enforcer.rs  workflow-parser.rs  workflow-runner.rs  workflow-validators.rs
.nemesis/workflow-enforcement/adapters/: package-manager-adapter.rs
.nemesis/workflow-enforcement/analysis/: gap-detector.rs
.nemesis/workflow-enforcement/behavioral/: override-system.rs
.nemesis/workflow-enforcement/cli/: DISABLEDenforce  DISABLEDnemesis-analysis  install-hooks.rs  pretool-hook.rs  run-nemesis-analysis.rs  scope.rs  test-all-workflows.rs  validate.rs  workflow-step-tracker.rs
.nemesis/workflow-enforcement/config/: deny-list-base.json  deny-list-generic.json  deny-list-go.json  deny-list-java.json  deny-list-python.json  deny-list-rust.json  deny-list-typescript.json  deny-list.json  denylist-folder-files.json  workflow-gabarito.json  workflow-gate-artifacts.json
.nemesis/workflow-enforcement/detectors/: environment-detector.rs
.nemesis/workflow-enforcement/engine/: rule-engine.rs
.nemesis/workflow-enforcement/harvest/: nemesis-harvest.rs  nemesis-install.rs
.nemesis/workflow-enforcement/hook/: code-validator.rs  deny-list-loader.rs  scope-validator.rs
.nemesis/workflow-enforcement/services/: terminal-reader-logger.rs  terminal-reader-service.rs  terminal-reader-types.rs
.nemesis/workflow-enforcement/types/: node.d.ts  node.rs
.nemesis/workflow-enforcement/validators/: ia-action-validator.rs
(+213 files in other folders)
