[workspace]
resolver = "2"
members = [
    "ast-linters",
    "ebpf-kernel",
    "nemesis-defender",
    "nemesis-cli",
]

[package]
name = "nemesis"
version = "8.2.0"
edition = "2021"
authors = ["Fernando Moreira"]
description = "Nemesis Workflow Enforcement Framework - SDD with Constraint-Based Orchestration"

[dependencies]
ast-linters = { path = "ast-linters" }
nemesis-defender = { path = "nemesis-defender" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "time", "io-std"] }
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
anyhow = "1"
thiserror = "1"
glob = "0.3"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
tower-lsp = "0.20"
tower = "0.4"
tokio-util = "0.7"
url = "2"

[dev-dependencies]
insta = "1"
tokio-test = "0.4"

# Biblioteca principal - módulos compartilhados
[lib]
name = "nemesis"
path = "workflow-enforcement/lib.rs"

# Binários executáveis - hooks
[[bin]]
name = "nemesis-pretool-check"
path = "hooks/nemesis-pretool-check.rs"

[[bin]]
name = "nemesis-pretool-check-unix"
path = "hooks/nemesis-pretool-check-unix.rs"

[[bin]]
name = "nemesis-pretool-check-windows"
path = "hooks/nemesis-pretool-check-windows.rs"

[[bin]]
name = "pre-edit-hook"
path = "hooks/pre-edit-hook.rs"

[[bin]]
name = "debug-hook-env"
path = "hooks/debug-hook-env.rs"

# Binários - CLI workflow-enforcement
[[bin]]
name = "nemesis-install-hooks"
path = "workflow-enforcement/cli/install-hooks.rs"

[[bin]]
name = "nemesis-pretool-hook"
path = "workflow-enforcement/cli/pretool-hook.rs"

[[bin]]
name = "nemesis-scope"
path = "workflow-enforcement/cli/scope.rs"

[[bin]]
name = "nemesis-validate"
path = "workflow-enforcement/cli/validate.rs"

[[bin]]
name = "nemesis-install"
path = "workflow-enforcement/harvest/nemesis-install.rs"

[[bin]]
name = "nemesis-lsp"
path = "lsp/nemesis-lsp.rs"

[[bin]]
name = "nemesis-posttool-check-unix"
path = "hooks/nemesis-posttool-check-unix.rs"
