[package]
name = "nemesis-cli"
version = "2.0.0"
edition = "2021"
authors = ["Fernando Moreira"]
description = "Nemesis Framework installer CLI - distribute and install Nemesis in target projects"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
ureq = "2"
tar = "0.4"
flate2 = "1"
nemesis = { path = ".." }

[[bin]]
name = "nemesis-cli"
path = "src/main.rs"
