[package]
name = "nemesis-publisher"
version = "0.1.0"
edition = "2021"
description = "Nemesis Defender — publisher de telemetria opt-in para dashboard"

[lib]
name = "nemesis_publisher"
path = "src/lib.rs"

[[bin]]
name = "nemesis-publisher"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
ureq = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rand = "0.8"
tiny_http = "0.12"
postgres = "0.19"
postgres-native-tls = "0.5"
native-tls = "0.2"
toml = "0.8"
regex = "1"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
