[package]
name = "nemesis"
version = "0.1.0"
edition = "2021"
description = "Nemesis Workflow Enforcement Framework"
license = "MIT"
repository = "https://github.com/nemesis/nemesis"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
glob = "0.3"
walkdir = "2.4"
nemesis-defender = { path = "../nemesis-defender" }

[dev-dependencies]

[[bin]]
name = "nemesis"
path = "src/main.rs"
